Make the reminder dialog somewhat more usable when working with they keyboard. No strange focus switching with up-down arrows in the spin box for example. And added an accelerator for the interval spin box.

BUG:137177


svn path=/branches/KDE/3.5/kdepim/; revision=604038